@@ -10,6 +10,7 @@
 	  http://lists.gnu.org/archive/html/gm2/2010-09/msg00027.html.
 	* gm2/lang-specs.h:  pass the -B option through to subcomponents
 	  if -fmakeall is used.
+	* gm2/gm2spec.c:  New function (find_executable_path).
 
 2010-10-05       Gaius Mulley <gaius@gnu.org>
 
